--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
         
 // Flag to control the visibility of the announcement
 
-        let showAnnouncement = true; // Set to false to hide the announcement
+        let showAnnouncement = false; // Set to false to hide the announcement
         // Function to check visibility status and update the announcement box
         function updateAnnouncementVisibility() {
             const announcement = document.getElementById('announcement');
