--- a/promo.html
+++ b/promo.html
@@ -171,9 +171,10 @@
     <script>
         let currentMoney;
         const promoCodes = [
-            { code: "FREE2K", reward: 2000 },
-            { code: "2025", reward: 250 },
-            { code: "ZONE", reward: 75 }
+            { code: "BLOXZEE", reward: 30 },
+            { code: "ROZONE", reward: 50 },
+            { code: "BLOXGAME", reward: 125 },
+            { code: "RAIN45", reward: 65 }
         ];
 
         // Temporary variable for tracking redeemed codes in this page session
