--- a/games/flip.html
+++ b/games/flip.html
@@ -236,7 +236,7 @@
             const flipOutcome = Math.random() < 0.5 ? 'Win' : 'Lose'; // Random win or lose
 
             if (flipOutcome === 'Win') {
-                setMoney(getMoney() + betAmount * 2); // Double the bet if win
+                setMoney(getMoney() + betAmount * 3); // Double bet if won (3x CHANGED FOR EVENT)
                 resultMessage.textContent = "You Won!";
                 resultMessage.style.color = "#00ff88";
             } else {
