--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
         
 // Flag to control the visibility of the announcement
 
-        let showAnnouncement = false; // Set to false to hide the announcement
+        let showAnnouncement = true; // Set to false to hide the announcement
         // Function to check visibility status and update the announcement box
         function updateAnnouncementVisibility() {
             const announcement = document.getElementById('announcement');
@@ -426,7 +426,7 @@
 
         <!-- Announcement Box -->
         <div id="announcement" class="announcement">
-            <p>Our new <a href="/rain">Rain</a> feature is live— get ready for a shower of earnings!</p>
+            <p>Our new <a href="/rain">Robux Rain</a> feature is live— get ready for a shower of earnings!</p>
         </div>
         
         <h1>
