--- a/games/pvp.html
+++ b/games/pvp.html
@@ -185,7 +185,7 @@
         }
 
         .bet-result.loss {
-            color: #ff0000; /* Red for loss */
+            color: #ff4d4d; /* Red for loss */
         }
     </style>
     <script>
