--- a/giveaways.html
+++ b/giveaways.html
@@ -219,10 +219,10 @@
 
         const giveaways = [
             {
-                "start-date": 1677200000,
-                "end-date": 1677290000,
-                "amount": 100000,
-                "update": 5,
+                "start-date": 1737148156,
+                "end-date": 1737425356,
+                "amount": 2500000,
+                "update": 2,
                 "joined": 0
             },
             {
