--- a/giveaways.html
+++ b/giveaways.html
@@ -229,17 +229,17 @@
 
         const giveaways = [
             {
-                "start-date": 1,
-                "end-date": 2,
+                "start-date": 1737148156,
+                "end-date": 1737425356,
                 "amount": 100000,
                 "update": 3,
                 "joined": 0
             },
             {
-                "start-date": 1,
-                "end-date": 2,
+                "start-date": 1737148156,
+                "end-date": 1737148356,
                 "amount": 500000,
-                "update": 10,
+                "update": 4,
                 "joined": 0
             }
         ];
